Added designs and began on right panel

--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
           <button type="button" id="action-button"></button>
           <div class="red-bar"></div>
           <div class="blue-bar"></div>
+          <div id="bottom-screen"></div>
+          <div class="arrows">
+            <div class="up-arrow"></div>
+            <div class="down-arrow"></div>
+          </div>
         </footer>
       </div>
-      <div id="right-panel"></div>
+      <div id="right-panel">
+        <div id="right-screen"></div>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
